# phd

./: pyproject.toml  readme.md
examples/: acdc.py  cahn_hilliard.py  doubly_nonlinear_parabolic.py  hill_moylan.py  lti.py  pendulum.py  quasilinear_wave.py  rigid_body.py  toda.py  van_der_pol.py
helpers/: errors.py  gauss.py  legendre.py  nonlinear_system.py  other.py  visualization.py
main/: controller.py  optimal_control.py  space_discretization.py  time_discretization.py
plots/: dg.py  dg_intro.py  dg_qsr.py  mpg_cahn_hilliard_state.py  mpg_convergence.py  mpg_doubly_nonlinear_parabolic_state.py  mpg_energybalance.py  oc_casadi.py  oc_state_adjoint.py  pc_passivity.py  pc_performance.py
